--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -1,6 +1,7 @@
 SyncState *
 
 # outlook {{{
+# remote {{{
 IMAPAccount OUTLOOK_ACCOUNT
 Host outlook.office365.com
 Port 993
@@ -10,7 +11,9 @@ PassCmd "gpg -dq ~/mail/pw/outlook.gpg"
 
 IMAPStore OUTLOOK_REMOTE
 Account OUTLOOK_ACCOUNT
+# }}}
 
+# local {{{
 MaildirStore OUTLOOK_LOCAL_INBOX
 SubFolders Maildir++
 Inbox ~/mail/raw/outlook/.INBOX/
@@ -42,8 +45,10 @@ Channel OUTLOOK_INBOX
 Channel OUTLOOK_X
 Channel OUTLOOK_MISC
 # }}}
+# }}}
 
 # eth {{{
+# remote {{{
 IMAPAccount ETH_ACCOUNT
 Host mail.ethz.ch
 Port 993
@@ -55,7 +60,9 @@ AuthMech LOGIN
 
 IMAPStore ETH_REMOTE
 Account ETH_ACCOUNT
+# }}}
 
+# local {{{
 MaildirStore ETH_LOCAL_INBOX
 SubFolders Maildir++
 Inbox ~/mail/raw/eth/.INBOX/
@@ -86,6 +93,7 @@ Group ETH_ALL
 Channel ETH_INBOX
 Channel ETH_X
 Channel ETH_MISC
+# }}}
 # }}}
 
 # vim: filetype=conf foldmethod=marker
