--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -37,7 +37,7 @@ Create Both
 Channel OUTLOOK_MISC
 Far :OUTLOOK_REMOTE:
 Near :OUTLOOK_LOCAL:
-Patterns "Deleted"
+Patterns "Sent" "Deleted"
 Create Both
 
 Group OUTLOOK_ALL
