Move box/virtual/notmuch.conf

--- a/.config/neomutt/box/box.conf
+++ b/.config/neomutt/box/box.conf
@@ -1,4 +1,4 @@
-source "~/.config/neomutt/box/notmuch"
+source "~/.config/neomutt/box/virtual/notmuch.conf"
 
 source "~/.config/neomutt/box/eth"
 folder-hook $folder 'source ~/.config/neomutt/box/eth'
