Move box/real/eth.conf

--- a/.config/neomutt/box/box.conf
+++ b/.config/neomutt/box/box.conf
@@ -1,7 +1,7 @@
 source "~/.config/neomutt/box/virtual/notmuch.conf"
 
-source "~/.config/neomutt/box/eth"
-folder-hook $folder 'source ~/.config/neomutt/box/eth'
+source "~/.config/neomutt/box/real/eth.conf"
+folder-hook $folder 'source ~/.config/neomutt/box/real/eth.conf'
 
 source "~/.config/neomutt/box/outlook"
 folder-hook $folder 'source ~/.config/neomutt/box/outlook'
