--- a/.config/neomutt/box/box.conf
+++ b/.config/neomutt/box/box.conf
@@ -3,7 +3,7 @@ source "~/.config/neomutt/box/virtual/notmuch.conf"
 source "~/.config/neomutt/box/real/eth.conf"
 folder-hook $folder 'source ~/.config/neomutt/box/real/eth.conf'
 
-source "~/.config/neomutt/box/outlook"
-folder-hook $folder 'source ~/.config/neomutt/box/outlook'
+source "~/.config/neomutt/box/real/outlook.conf"
+folder-hook $folder 'source ~/.config/neomutt/box/real/outlook.conf'
 
 # vim: filetype=neomuttrc foldmethod=marker
