Move box/real/common/header.conf

--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -12,7 +12,7 @@ named-mailboxes \
 set real_name = "Shengdi 'shc' Chen"
 set from = "shengdi@outlook.de"
 
-source ~/.config/neomutt/common/header
+source "~/.config/neomutt/box/real/common/header.conf"
 my_hdr Reply-To: "shengdi@outlook.de"
 
 set sendmail = "msmtp -a outlook"
