--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -11,7 +11,7 @@ named-mailboxes \
 set real_name = "Shengdi 'shc' Chen"
 set from = "shenchen@ethz.ch"
 
-source ~/.config/neomutt/common/header
+source "~/.config/neomutt/box/real/common/header.conf"
 my_hdr Reply-To: "shenchen@ethz.ch"
 
 set sendmail = "msmtp -a eth"
