Use Maildir-format for sent/draft folders

--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -15,8 +15,8 @@ source "~/.config/neomutt/box/real/common/header.conf"
 my_hdr Reply-To: "shenchen@ethz.ch"
 
 set sendmail = "msmtp -a eth"
-set record = "+Sent"
-set postponed = "+Drafts"
+set record = "+.Sent"
+set postponed = "+.Drafts"
 # }}}
 
 # vim: filetype=neomuttrc foldmethod=marker
