--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -16,8 +16,8 @@ source "~/.config/neomutt/box/real/common/header.conf"
 my_hdr Reply-To: "shengdi@outlook.de"
 
 set sendmail = "msmtp -a outlook"
-set record = "+Sent"
-set postponed = "+Drafts"
+set record = "+.Sent"
+set postponed = "+.Drafts"
 # }}}
 
 # vim: filetype=neomuttrc foldmethod=marker
