--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -17,6 +17,8 @@ my_hdr Reply-To: "shenchen@ethz.ch"
 set sendmail = "msmtp -a eth"
 set record = "+.Sent"
 set postponed = "+.Drafts"
+
+set trash = "+.Trash"
 # }}}
 
 # vim: filetype=neomuttrc foldmethod=marker
