--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -18,6 +18,8 @@ my_hdr Reply-To: "shengdi@outlook.de"
 set sendmail = "msmtp -a outlook"
 set record = "+.Sent"
 set postponed = "+.Drafts"
+
+set trash = "+.Deleted"
 # }}}
 
 # vim: filetype=neomuttrc foldmethod=marker
