--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -39,7 +39,7 @@ Expunge Both
 Channel OUTLOOK_MISC
 Far :OUTLOOK_REMOTE:
 Near :OUTLOOK_LOCAL:
-Patterns "Sent" "Deleted"
+Patterns "Sent" "Deleted" "Drafts"
 Create Both
 Expunge Both
 
