--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -95,7 +95,7 @@ Expunge Both
 Channel ETH_MISC
 Far :ETH_REMOTE:
 Near :ETH_LOCAL:
-Patterns "Skickat" "Trash"
+Patterns "Skickat" "Trash" "Drafts"
 Create Both
 Expunge Both
 
