--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -4,7 +4,9 @@ set folder = "~/mail/raw/eth/"
 
 named-mailboxes \
     "ETH_INBOX" "~/mail/raw/eth/.INBOX/" \
-    "ETH_DEL" "~/mail/raw/eth/.Trash/"
+    "ETH_SENT" "~/mail/raw/eth/.Skickat/" \
+    "ETH_DEL" "~/mail/raw/eth/.Trash/" \
+    "ETH_DRAFT" "~/mail/raw/eth/.Drafts/"
 # }}}
 
 # write {{{
