Add all outlook-boxes mutt

--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -5,7 +5,8 @@ set folder = "~/mail/raw/outlook/"
 named-mailboxes \
     "OUTLOOK_INBOX" ~/mail/raw/outlook/.INBOX/ \
     "OUTLOOK_SENT" ~/mail/raw/outlook/.Sent/ \
-    "OUTLOOK_DEL" ~/mail/raw/outlook/.Deleted/
+    "OUTLOOK_DEL" ~/mail/raw/outlook/.Deleted/ \
+    "OUTLOOK_DRAFT" ~/mail/raw/outlook/.Drafts/
 # }}}
 
 # write {{{
