Correct eth-sent (to Skickat) for mutt

--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -17,7 +17,7 @@ source "~/.config/neomutt/box/real/common/header.conf"
 my_hdr Reply-To: "shenchen@ethz.ch"
 
 set sendmail = "msmtp -a eth"
-set record = "+.Sent"
+set record = "+.Skickat"
 set postponed = "+.Drafts"
 
 set trash = "+.Trash"
