Do NOT create local copies of |Sent| for outlook

--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -17,7 +17,7 @@ source "~/.config/neomutt/box/real/common/header.conf"
 my_hdr Reply-To: "shengdi@outlook.de"
 
 set sendmail = "msmtp -a outlook"
-set record = "+.Sent"
+set record = ""  # outlook auto-registers sent mail
 set postponed = "+.Drafts"
 
 set trash = "+.Deleted"
