Use local-variables for mail-addr

--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -11,10 +11,11 @@ named-mailboxes \
 
 # write {{{
 set real_name = "Shengdi 'shc' Chen"
-set from = "shenchen@ethz.ch"
+set my_mail_addr = "shenchen@ethz.ch"
 
+set from = "$my_mail_addr"
 source "~/.config/neomutt/box/real/common/header.conf"
-my_hdr Reply-To: "shenchen@ethz.ch"
+my_hdr Reply-To: "$my_mail_addr"
 
 set sendmail = "msmtp -a eth"
 set record = "+.Skickat"
