--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -11,10 +11,11 @@ named-mailboxes \
 
 # write {{{
 set real_name = "Shengdi 'shc' Chen"
-set from = "shengdi@outlook.de"
+set my_mail_addr = "shengdi@outlook.de"
 
+set from = "$my_mail_addr"
 source "~/.config/neomutt/box/real/common/header.conf"
-my_hdr Reply-To: "shengdi@outlook.de"
+my_hdr Reply-To: "$my_mail_addr"
 
 set sendmail = "msmtp -a outlook"
 set record = ""  # outlook auto-registers sent mail
