Rename trash-dir in mutt

--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -9,7 +9,7 @@ set postponed = "+.Drafts"
 named-mailboxes \
     "OUTLOOK_INBOX" ~/mail/raw/outlook/.INBOX/ \
     "OUTLOOK_SENT" ~/mail/raw/outlook/.Sent/ \
-    "OUTLOOK_DEL" ~/mail/raw/outlook/.Deleted/ \
+    "OUTLOOK_TRASH" ~/mail/raw/outlook/.Deleted/ \
     "OUTLOOK_DRAFT" ~/mail/raw/outlook/.Drafts/
 # }}}
 
