--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -9,7 +9,7 @@ set postponed = "+.Drafts"
 named-mailboxes \
     "ETH_INBOX" "~/mail/raw/eth/.INBOX/" \
     "ETH_SENT" "~/mail/raw/eth/.Skickat/" \
-    "ETH_DEL" "~/mail/raw/eth/.Trash/" \
+    "ETH_TRASH" "~/mail/raw/eth/.Trash/" \
     "ETH_DRAFT" "~/mail/raw/eth/.Drafts/"
 # }}}
 
