Add bind for reset'g filter

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -92,6 +92,7 @@ macro index \cj "\cn\cn\cn\cn" "box-jjjj"
 
 # must escape semi-colon
 bind index \; limit
+macro index <Backspace> <limit>all<Return> "limit reset"
 
 bind index mm mail
 bind index mb bounce-message
