Add bind for switch'g btwn box&file

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -142,6 +142,9 @@ bind compose > move-down
 # (file-)browser {{{
 bind browser h goto-parent
 
+# switch between box(es) and filesystem
+bind browser <Space> toggle-mailboxes
+
 bind browser <Enter> view-file
 bind browser <Return> view-file
 # }}}
