Add binds for tag'g&mov'g

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -106,6 +106,14 @@ bind index zA collapse-all
 bind index H previous-thread
 bind index L next-thread
 
+# tag {{{
+macro index tt <tag-entry>k "tag"
+macro index tk <tag-entry>kk "tag, k"
+macro index tj <tag-entry> "tag, j"
+macro index tK tktktktk "tag, kkkk"
+macro index tJ tjtjtjtj "tag, jjjj"
+# }}}
+
 bind index aa view-attachments
 bind index at view-raw-message
 bind index ae edit-type
