Add binds for tag'g patterns

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -112,6 +112,11 @@ macro index tk <tag-entry>kk "tag, k"
 macro index tj <tag-entry> "tag, j"
 macro index tK tktktktk "tag, kkkk"
 macro index tJ tjtjtjtj "tag, jjjj"
+
+bind index t. tag-pattern
+bind index t, untag-pattern
+macro index t> "<tag-pattern>.<Return>" "tag *"
+macro index t< "<untag-pattern>.<Return>" "untag *"
 # }}}
 
 bind index aa view-attachments
