Add binds for apply'g commands to tags

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -117,6 +117,9 @@ bind index t. tag-pattern
 bind index t, untag-pattern
 macro index t> "<tag-pattern>.<Return>" "tag *"
 macro index t< "<untag-pattern>.<Return>" "untag *"
+
+macro index "t;" "<tag-prefix-cond>" "tag:<bind>"
+macro index t: "<enter-command>exec tag-prefix-cond " "tag:<command>"
 # }}}
 
 bind index aa view-attachments
