Add bind for commit'g current box

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -106,6 +106,8 @@ bind index zA collapse-all
 bind index H previous-thread
 bind index L next-thread
 
+macro index ss "<sync-mailbox><Enter><check-stats>" "commit"
+
 # tag {{{
 macro index tt <tag-entry>k "tag"
 macro index tk <tag-entry>kk "tag, k"
