--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -108,6 +108,13 @@ bind index L next-thread
 
 macro index ss "<sync-mailbox><Enter><check-stats>" "commit"
 
+# delete {{{
+bind index dd delete-message
+macro index dD <delete-message><sync-mailbox><Return><check-stats> "delete!"
+
+bind index du undelete-message
+# }}}
+
 # tag {{{
 macro index tt <tag-entry>k "tag"
 macro index tk <tag-entry>kk "tag, k"
