--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -112,6 +112,10 @@ macro index ss "<sync-mailbox><Enter><check-stats>" "commit"
 bind index dd delete-message
 macro index dD <delete-message><sync-mailbox><Return><check-stats> "delete!"
 
+bind index d. delete-pattern
+bind index d, undelete-pattern
+macro index d> <delete-pattern>.<Return><sync-mailbox><Return><check-stats> "delete *!"
+
 bind index du undelete-message
 # }}}
 
