Add binds for call'g isync

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -106,7 +106,29 @@ bind index zA collapse-all
 bind index H previous-thread
 bind index L next-thread
 
+# sync {{{
 macro index ss "<sync-mailbox><Enter><check-stats>" "commit"
+
+macro index soo \
+"<shell-escape> mbsync -V OUTLOOK_" \
+"push outlook-?"
+macro index sos \
+"<shell-escape> mbsync -V OUTLOOK_SYS<Return>" \
+"push outlook-sys"
+macro index sox \
+"<shell-escape> mbsync -V OUTLOOK_X<Return>" \
+"push outlook-x"
+
+macro index see \
+"<shell-escape> mbsync -V ETH_" \
+"push eth-?"
+macro index ses \
+"<shell-escape> mbsync -V ETH_SYS<Return>" \
+"push eth-sys"
+macro index sex \
+"<shell-escape> mbsync -V ETH_X<Return>" \
+"push eth-x"
+# }}}
 
 # delete {{{
 bind index dd delete-message
