Add bind for mov'g mail to box

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -130,6 +130,8 @@ macro index sex \
 "push eth-x"
 # }}}
 
+macro index yy "<save-message>?<toggle-mailboxes>" "move to box"
+
 # delete {{{
 bind index dd delete-message
 macro index dD <delete-message><sync-mailbox><Return><check-stats> "delete!"
