Stop prompt'g for box-mov'g

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -130,6 +130,8 @@ macro index sex \
 "push eth-x"
 # }}}
 
+# do not prompt for confirming box-moving
+set confirm_append = no
 macro index yy "<save-message>?<toggle-mailboxes>" "move to box"
 
 # delete {{{
