Add vbox for all NM-mails

--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -1,6 +1,7 @@
 set nm_default_url = "notmuch:///home/main/mail/raw"
 
 virtual-mailboxes \
+    "NM" "notmuch://?query=*" \
     "NM_UNREAD" "notmuch://?query=tag:unread" \
     "NM_INBOX" "notmuch://?query=tag:inbox"
 
