Add vbox for eth&outlook

--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -2,6 +2,8 @@ set nm_default_url = "notmuch:///home/main/mail/raw"
 
 virtual-mailboxes \
     "NM" "notmuch://?query=*" \
+    "NM_B_ETH" "notmuch://?query=folder:/eth/" \
+    "NM_B_OUTLOOK" "notmuch://?query=folder:/outlook/" \
     "NM_UNREAD" "notmuch://?query=tag:unread" \
     "NM_INBOX" "notmuch://?query=tag:inbox"
 
