--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -4,7 +4,7 @@ virtual-mailboxes \
     "NM" "notmuch://?query=*" \
     "NM_B_ETH" "notmuch://?query=folder:/eth/" \
     "NM_B_OUTLOOK" "notmuch://?query=folder:/outlook/" \
-    "NM_UNREAD" "notmuch://?query=tag:unread" \
-    "NM_INBOX" "notmuch://?query=tag:inbox"
+    "NM_T_UNREAD" "notmuch://?query=tag:unread" \
+    "NM_T_INBOX" "notmuch://?query=tag:inbox"
 
 # vim: filetype=neomuttrc foldmethod=marker
