Add notmuch-substitutes for INBOX

--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -3,7 +3,9 @@ set nm_default_url = "notmuch:///home/main/mail/raw"
 virtual-mailboxes \
     "NM" "notmuch://?query=*" \
     "NM_B_ETH" "notmuch://?query=folder:/eth/" \
+    "NM_ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
     "NM_B_OUTLOOK" "notmuch://?query=folder:/outlook/" \
+    "NM_OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX" \
     "NM_T_UNREAD" "notmuch://?query=tag:unread" \
     "NM_T_INBOX" "notmuch://?query=tag:inbox"
 
