--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -4,8 +4,12 @@ virtual-mailboxes \
     "NM" "notmuch://?query=*" \
     "NM_B_ETH" "notmuch://?query=folder:/eth/" \
     "NM_ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
+    "NM_ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
+    "NM_ETH_TRASH" "notmuch://?query=folder:eth/.Trash" \
     "NM_B_OUTLOOK" "notmuch://?query=folder:/outlook/" \
     "NM_OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX" \
+    "NM_OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent" \
+    "NM_OUTLOOK_TRASH" "notmuch://?query=folder:outlook/.Deleted" \
     "NM_T_UNREAD" "notmuch://?query=tag:unread" \
     "NM_T_INBOX" "notmuch://?query=tag:inbox"
 
