--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -6,11 +6,7 @@ set record = "+.Skickat"
 set trash = "+.Trash"
 set postponed = "+.Drafts"
 
-named-mailboxes \
-    "ETH_INBOX" "~/mail/raw/eth/.INBOX/" \
-    "ETH_SENT" "~/mail/raw/eth/.Skickat/" \
-    "ETH_TRASH" "~/mail/raw/eth/.Trash/" \
-    "ETH_DRAFT" "~/mail/raw/eth/.Drafts/"
+source "~/.config/neomutt/box/real/eth_box_set.conf"
 # }}}
 
 # write {{{
