--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -6,11 +6,7 @@ set record = ""  # outlook auto-registers sent mail
 set trash = "+.Deleted"
 set postponed = "+.Drafts"
 
-named-mailboxes \
-    "OUTLOOK_INBOX" ~/mail/raw/outlook/.INBOX/ \
-    "OUTLOOK_SENT" ~/mail/raw/outlook/.Sent/ \
-    "OUTLOOK_TRASH" ~/mail/raw/outlook/.Deleted/ \
-    "OUTLOOK_DRAFT" ~/mail/raw/outlook/.Drafts/
+source "~/.config/neomutt/box/real/outlook_box_set.conf"
 # }}}
 
 # write {{{
