Add bind for load'g non-notmuch boxes

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -83,6 +83,13 @@ bind generic q exit
 # index {{{
 bind index cc sidebar-toggle-visible
 macro index cd "<change-folder>?" "change-box"
+
+macro index ca \
+"<enter-command>source ~/.config/neomutt/box/real/eth_box_set.conf<Return>\
+<enter-command>source ~/.config/neomutt/box/real/outlook_box_set.conf<Return>\
+<check-stats>\
+" "box all"
+
 bind index <Enter> sidebar-open
 bind index <Return> sidebar-open
 bind index \cp sidebar-prev
