Add bind for unload'g non-notmuch boxes

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -90,6 +90,12 @@ macro index ca \
 <check-stats>\
 " "box all"
 
+macro index cA \
+"<enter-command>source ~/.config/neomutt/box/real/eth_box_unset.conf<Return>\
+<enter-command>source ~/.config/neomutt/box/real/outlook_box_unset.conf<Return>\
+<check-stats>\
+" "unbox all"
+
 bind index <Enter> sidebar-open
 bind index <Return> sidebar-open
 bind index \cp sidebar-prev
