Add vbox for unread&inbox

--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -1,6 +1,8 @@
 set nm_default_url = "notmuch:///home/main/mail/raw"
 
 virtual-mailboxes \
+    "UNREAD_INBOX" "notmuch://?query=tag:unread \
+    and folder:eth/.INBOX folder:outlook/.INBOX" \
     "B_ETH" "notmuch://?query=folder:/eth/" \
     "ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
     "ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
