Rename vbox nam'g-patterns

--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -3,15 +3,15 @@ set nm_default_url = "notmuch:///home/main/mail/raw"
 virtual-mailboxes \
     "UNREAD_INBOX" "notmuch://?query=tag:unread \
     and folder:eth/.INBOX folder:outlook/.INBOX" \
-    "B_ETH" "notmuch://?query=folder:/eth/" \
-    "ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
-    "ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
-    "ETH_TRASH" "notmuch://?query=folder:eth/.Trash" \
-    "B_OUTLOOK" "notmuch://?query=folder:/outlook/" \
-    "OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX" \
-    "OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent" \
-    "OUTLOOK_TRASH" "notmuch://?query=folder:outlook/.Deleted" \
-    "T_UNREAD" "notmuch://?query=tag:unread" \
-    "T_INBOX" "notmuch://?query=tag:inbox"
+    "_ETH" "notmuch://?query=folder:/eth/" \
+    "_ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
+    "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
+    "_ETH_TRASH" "notmuch://?query=folder:eth/.Trash" \
+    "_OUTLOOK" "notmuch://?query=folder:/outlook/" \
+    "_OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX" \
+    "_OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent" \
+    "_OUTLOOK_TRASH" "notmuch://?query=folder:outlook/.Deleted" \
+    "UNREAD" "notmuch://?query=tag:unread" \
+    "INBOX" "notmuch://?query=tag:inbox"
 
 # vim: filetype=neomuttrc foldmethod=marker
