Do NOT use |old|-tag (|new| only)

--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -1,5 +1,8 @@
 set nm_default_url = "notmuch:///home/main/mail/raw"
 
+# do NOT distinguish |old| from unread/new
+set mark_old = no
+
 virtual-mailboxes \
     "UNREAD_INBOX" "notmuch://?query=tag:unread \
     and folder:eth/.INBOX folder:outlook/.INBOX" \
