Add binds for load'g eth&outlook confs

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -84,6 +84,16 @@ bind generic q exit
 bind index cc sidebar-toggle-visible
 macro index cd "<change-folder>?" "change-box"
 
+macro index ce \
+"<enter-command>source ~/.config/neomutt/box/real/eth.conf<Return>\
+<check-stats>\
+" "eth info"
+
+macro index co \
+"<enter-command>source ~/.config/neomutt/box/real/outlook.conf<Return>\
+<check-stats>\
+" "outlook info"
+
 macro index ca \
 "<enter-command>source ~/.config/neomutt/box/real/eth_box_set.conf<Return>\
 <enter-command>source ~/.config/neomutt/box/real/outlook_box_set.conf<Return>\
