--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -6,6 +6,7 @@ set mark_old = no
 virtual-mailboxes \
     "UNREAD_INBOX" "notmuch://?query=tag:unread \
     and folder:eth/.INBOX folder:outlook/.INBOX" \
+    "TRASH" "notmuch://?query=folder:eth/.Trash folder:outlook/.Deleted" \
     "_ETH" "notmuch://?query=folder:/eth/" \
     "_ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
     "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
