Add separate binds for commit'g mail&notmuch

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -130,7 +130,8 @@ bind index H previous-thread
 bind index L next-thread
 
 # sync {{{
-macro index ss "<sync-mailbox><Enter><check-stats>" "commit"
+macro index sm "<sync-mailbox><Enter><check-stats>" "commit mail"
+macro index sn "<shell-escape>notmuch new<Return><check-stats>" "commit notmuch"
 
 macro index soo \
 "<shell-escape> mbsync -V OUTLOOK_" \
