Add bind for commit'g mail&notmuch

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -133,6 +133,13 @@ bind index L next-thread
 macro index sm "<sync-mailbox><Enter><check-stats>" "commit mail"
 macro index sn "<shell-escape>notmuch new<Return><check-stats>" "commit notmuch"
 
+macro index ss \
+"sm\
+<enter-command>set wait_key=no<Return>\
+sn\
+<enter-command>set wait_key=yes<Return>\
+" "commit"
+
 macro index soo \
 "<shell-escape> mbsync -V OUTLOOK_" \
 "push outlook-?"
