Show notmuch-tag in |index|

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -21,7 +21,7 @@ set sidebar_format = " %D %* %?N?%N&-?/%S "
 set index_format = " \
 %03C  [%zs%zc%zt]   %-59.59s     %-.39a  >  %-.39r \
 %* \
-%4cr  %{$date_format} \
+%g  %4cr  %{$date_format} \
 "
 
 set status_chars = " +xA"
