Add bind for notmuch-query

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -113,9 +113,18 @@ bind index \cn sidebar-next
 macro index \ck "\cp\cp\cp\cp" "box-kkkk"
 macro index \cj "\cn\cn\cn\cn" "box-jjjj"
 
+# query {{{
+macro index // "\
+<enter-command>exec vfolder-from-query<Return>\
+" "nm-*"
+
+# native (neo)mutt search
+bind index /? search
+
 # must escape semi-colon
 bind index \; limit
 macro index <Backspace> <limit>all<Return> "limit reset"
+# }}}
 
 bind index mm mail
 bind index mb bounce-message
