Add binds for common notmuch-queries

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -118,6 +118,16 @@ macro index // "\
 <enter-command>exec vfolder-from-query<Return>\
 " "nm-*"
 
+macro index /t "\
+<enter-command>exec vfolder-from-query<Return>tag:/\
+" "nm-tag"
+macro index /f "\
+<enter-command>exec vfolder-from-query<Return>folder:/\
+" "nm-folder"
+macro index /d "\
+<enter-command>exec vfolder-from-query<Return>date:\
+" "nm-date"
+
 # native (neo)mutt search
 bind index /? search
 
