Add binds for mail-message-related nm-queries

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -128,6 +128,19 @@ macro index /d "\
 <enter-command>exec vfolder-from-query<Return>date:\
 " "nm-date"
 
+macro index /ms "\
+<enter-command>exec vfolder-from-query<Return>subject:/\
+" "nm-subject"
+macro index /mf "\
+<enter-command>exec vfolder-from-query<Return>from:/\
+" "nm-from"
+macro index /mt "\
+<enter-command>exec vfolder-from-query<Return>to:\
+" "nm-to"
+macro index /mb "\
+<enter-command>exec vfolder-from-query<Return>body:\
+" "nm-body"
+
 # native (neo)mutt search
 bind index /? search
 
