Add binds for notmuch-(re)tag'g

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -149,6 +149,14 @@ bind index \; limit
 macro index <Backspace> <limit>all<Return> "limit reset"
 # }}}
 
+# retag {{{
+macro index rr "<enter-command>exec modify-labels<Return>" "retag"
+
+macro index rt "\
+<enter-command>exec tag-prefix-cond modify-labels<Return>\
+" "retag-tagged"
+# }}}
+
 bind index mm mail
 bind index mb bounce-message
 bind index mf forward-message
