Use folder (not tag) for all INBOXes

--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -16,6 +16,6 @@ virtual-mailboxes \
     "_OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent" \
     "_OUTLOOK_TRASH" "notmuch://?query=folder:outlook/.Deleted" \
     "UNREAD" "notmuch://?query=tag:unread" \
-    "INBOX" "notmuch://?query=tag:inbox"
+    "INBOX" "notmuch://?query=folder:eth/.INBOX folder:outlook/.INBOX"
 
 # vim: filetype=neomuttrc foldmethod=marker
