--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -1,5 +1,11 @@
 set nm_default_url = "notmuch:///home/main/mail/raw"
 
+# exclude these (implicit) tags from %g
+set hidden_tags = \
+"_ATTACHMENT,_SIGNED,_ENCRYPTED,\
+unread,replied,draft,flagged,passed,\
+_SYS,_X"
+
 # do NOT distinguish |old| from unread/new
 set mark_old = no
 
