Add ref-name for tags

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -24,6 +24,26 @@ set index_format = " \
 %g  %4cr  %{$date_format} \
 "
 
+# notmuch {{{
+# reference-name {{{
+tag-formats \
+    "_ATTACHMENT" "GA" \
+    "_SIGNED" "GS" \
+    "_ENCRYPTED" "GE"
+
+tag-formats \
+    "unread" "GU" \
+    "flagged" "GF" \
+    "draft" "GD" \
+    "replied" "GR" \
+    "passed" "GP"
+
+tag-formats \
+    "_SYS" "GY" \
+    "_X" "GX"
+# }}}
+# }}}
+
 set status_chars = " +xA"
 set status_format = " \
 %D = (#%m, ~%l) \
