Add custom display for tags

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -42,6 +42,24 @@ tag-formats \
     "_SYS" "GY" \
     "_X" "GX"
 # }}}
+
+# display {{{
+tag-transforms \
+    "_ATTACHMENT" "A" \
+    "_SIGNED" "S" \
+    "_ENCRYPTED" "E"
+
+tag-transforms \
+    "unread" "U" \
+    "flagged" "F" \
+    "draft" "D" \
+    "replied" "R" \
+    "passed" "P"
+
+tag-transforms \
+    "_SYS" "Y" \
+    "_X" "X"
+# }}}
 # }}}
 
 set status_chars = " +xA"
