Add attachment-tag next to size

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -21,7 +21,7 @@ set sidebar_format = " %D %* %?N?%N&-?/%S "
 set index_format = " \
 %03C%?GU?*& ?%?GX? &/?  %-59.59s     %-.39a  %GS%GE>  %?r?%-.39r&[]? \
 %* \
-%g  %4cr  %{$date_format} \
+%g  %4cr%?GA?+& ?  %{$date_format} \
 "
 
 # notmuch {{{
