Show all in file-browser

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -76,4 +76,7 @@ set sort = reverse-last-date
 set sort_aux = date
 # }}}
 
+# show all in file-browser
+set mask = "^"
+
 # vim: filetype=neomuttrc foldmethod=marker
