Use (1)space to separate sidebar&index

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -12,7 +12,7 @@ set date_format = "%Y.%b.%d-%T"
 set sidebar_visible = yes
 set sidebar_new_mail_only = no
 set sidebar_width = 29
-set sidebar_divider_char = '|'
+set sidebar_divider_char = ' '
 
 set sidebar_format = " %D %* %?N?%N&-?/%S "
 # }}}
