--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -14,11 +14,11 @@ set sidebar_new_mail_only = no
 set sidebar_width = 29
 set sidebar_divider_char = ' '
 
-set sidebar_format = " %D %* %?N?%N&-?/%S "
+set sidebar_format = " %D %* %?N?%N/&?%S"
 # }}}
 
 # index {{{
-set index_format = " \
+set index_format = "\
 %03C%?GU?*& ?%?GX? &/? %?GF?!& ?%-59.59s     %-.39a  %GS%GE>  %?r?%-.39r&[]? \
 %* \
 %?g?{%g} &?%4cr%?GA?+& ?  %{$date_format} \
