Simplify thread&attach't tree

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -8,6 +8,10 @@ set mail_check_stats = yes
 
 set date_format = "%Y.%b.%d-%T"
 
+# for thread & attachment trees
+set ascii_chars = yes
+set narrow_tree = yes  # shorten thread-indicator
+
 # sidebar {{{
 set sidebar_visible = yes
 set sidebar_new_mail_only = no
