Show |index| above |pager|

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -80,6 +80,9 @@ set sort = reverse-last-date
 set sort_aux = date
 # }}}
 
+# partially show |index| above |pager|
+set pager_index_lines = 7
+
 # show all in file-browser
 set mask = "^"
 
