Add general colors (default&active)

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -79,4 +79,13 @@ set sort_aux = date
 # show all in file-browser
 set mask = "^"
 
+# color {{{
+# genereal {{{
+# default
+color normal color255 color016
+# active
+color indicator color231 color237
+# }}}
+# }}}
+
 # vim: filetype=neomuttrc foldmethod=marker
