Add colors for |index|

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -86,6 +86,26 @@ color normal color255 color016
 # active
 color indicator color231 color237
 # }}}
+
+# index {{{
+# rows {{{
+# tagged
+color index color212 color016 "~T"
+# new
+color index color117 color016 "~N"
+# deleted
+color index color197 color016 "~D"
+# }}}
+
+# columns {{{
+color index_number color245 color016
+
+color index_date color245 color016
+
+# thread-indicator
+color tree color245 color016
+# }}}
+# }}}
 # }}}
 
 # vim: filetype=neomuttrc foldmethod=marker
