Add colors for |sidebar|

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -87,6 +87,7 @@ color normal color255 color016
 color indicator color231 color237
 # }}}
 
+# component-specifics {{{
 # index {{{
 # rows {{{
 # tagged
@@ -104,6 +105,17 @@ color index_date color245 color016
 
 # thread-indicator
 color tree color245 color016
+# }}}
+# }}}
+
+# sidebar {{{
+# default
+color sidebar_background color255 color016
+# active
+color sidebar_indicator color231 color237
+# selected (to be activated)
+color sidebar_highlight color141 color016
+color sidebar_divider color245 color016
 # }}}
 # }}}
 # }}}
