Add colors for |compose|

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -117,6 +117,15 @@ color sidebar_indicator color231 color237
 color sidebar_highlight color141 color016
 color sidebar_divider color245 color016
 # }}}
+
+# compose {{{
+color compose header color245 color016
+color compose security_none color245 color016
+
+color compose security_sign color117 color016
+color compose security_encrypt color141 color016
+color compose security_both color141 color016
+# }}}
 # }}}
 # }}}
 
