Add colors for mail-headers

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -127,6 +127,13 @@ color compose security_encrypt color141 color016
 color compose security_both color141 color016
 # }}}
 # }}}
+
+# header {{{
+color header color245 color016
+color header color212 color016 "^Subject:\\s.*"
+color header color117 color016 "^From:\\s.*"
+color header color117 color016 "^To:\\s.*"
+# }}}
 # }}}
 
 # vim: filetype=neomuttrc foldmethod=marker
