Add color for attach't info

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -128,11 +128,15 @@ color compose security_both color141 color016
 # }}}
 # }}}
 
+# email {{{
 # header {{{
 color header color245 color016
 color header color212 color016 "^Subject:\\s.*"
 color header color117 color016 "^From:\\s.*"
 color header color117 color016 "^To:\\s.*"
+# }}}
+
+color attach_headers color245 color016
 # }}}
 # }}}
 
