Darken line-number in |pager|

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -137,6 +137,9 @@ color header color117 color016 "^To:\\s.*"
 # }}}
 
 color attach_headers color245 color016
+
+# line-number gutter
+color body color245 color016 "^[0-9]+"
 # }}}
 # }}}
 
