Highlight mail-addr&URL

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -138,8 +138,15 @@ color header color117 color016 "^To:\\s.*"
 
 color attach_headers color245 color016
 
+# body {{{
 # line-number gutter
 color body color245 color016 "^[0-9]+"
+
+# mail address
+color body color117 color016 "\\S+@\\S+\\.\\S+"
+# URL
+color body color117 color016 "\\S+://\\S.+\.\\S+"
+# }}}
 # }}}
 # }}}
 
