--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -146,6 +146,9 @@ color body color245 color016 "^[0-9]+"
 color body color117 color016 "\\S+@\\S+\\.\\S+"
 # URL
 color body color117 color016 "\\S+://\\S.+\.\\S+"
+
+# >quote (~Markdown)
+color body color141 color016 "\\s{2,}>+\\s+"
 # }}}
 # }}}
 # }}}
