Darken separator (~Markdown)

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -149,6 +149,9 @@ color body color117 color016 "\\S+://\\S.+\.\\S+"
 
 # >quote (~Markdown)
 color body color141 color016 "\\s{2,}>+\\s+"
+
+# separator (~Markdown)
+color body color245 color016 "\\s{2,}-{3,}$"
 # }}}
 # }}}
 # }}}
