Add colors for statusbar (& below)

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -126,6 +126,14 @@ color compose security_sign color117 color016
 color compose security_encrypt color141 color016
 color compose security_both color141 color016
 # }}}
+
+# status and below {{{
+color status color245 color016
+
+color message color231 color016
+color prompt color231 color016
+color error color197 color016
+# }}}
 # }}}
 
 # email {{{
