--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -134,6 +134,8 @@ color message color231 color016
 color prompt color231 color016
 color error color197 color016
 # }}}
+
+color search color016 color255  # pager only
 # }}}
 
 # email {{{
