--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -15,6 +15,8 @@ set from = "$my_mail_addr"
 source "~/.config/neomutt/box/real/common/header.conf"
 my_hdr Reply-To: "$my_mail_addr"
 
+set signature = "~/.config/neomutt/box/real/eth.sig"
+
 set sendmail = "msmtp -a eth"
 # }}}
 
