--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -5,6 +5,9 @@ set folder = "~/mail/raw/eth/"
 set record = "+.Skickat"
 set trash = "+.Trash"
 set postponed = "+.Drafts"
+
+named-mailboxes \
+    "ETH_TRASH" "~/mail/raw/eth/.Trash/" \
 # }}}
 
 # write {{{
