--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -5,6 +5,9 @@ set folder = "~/mail/raw/outlook/"
 set record = ""  # outlook auto-registers sent mail
 set trash = "+.Deleted"
 set postponed = "+.Drafts"
+
+named-mailboxes \
+    "OUTLOOK_TRASH" ~/mail/raw/outlook/.Deleted/ \
 # }}}
 
 # write {{{
