Copy over default config

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -80,8 +80,16 @@ set sort = reverse-last-date
 set sort_aux = date
 # }}}
 
+# pager {{{
 # partially show |index| above |pager|
 set pager_index_lines = 7
+
+set pager_format  = "\
+ -%Z- %C/%m: %-20.20n   %s\
+%*  \
+-- (%P) \
+"
+# }}}
 
 # show all in file-browser
 set mask = "^"
