Replace nm-unread-inbox by nm-inbox

--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -10,15 +10,13 @@ _SYS,_X"
 set mark_old = no
 
 virtual-mailboxes \
-    "UNREAD_INBOX" "notmuch://?query=tag:unread \
-    and folder:eth/.INBOX folder:outlook/.INBOX" \
+    "INBOX" "notmuch://?query=folder:eth/.INBOX folder:outlook/.INBOX" \
     "_ETH" "notmuch://?query=folder:/eth/" \
     "_ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
     "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
     "_OUTLOOK" "notmuch://?query=folder:/outlook/" \
     "_OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX" \
     "_OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent" \
-    "UNREAD" "notmuch://?query=tag:unread" \
-    "INBOX" "notmuch://?query=folder:eth/.INBOX folder:outlook/.INBOX"
+    "UNREAD" "notmuch://?query=tag:unread"
 
 # vim: filetype=neomuttrc foldmethod=marker
