--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -226,7 +226,10 @@ ss\
 
 # do not prompt for confirming box-moving
 set confirm_append = no
-macro index yy "<save-message>?<toggle-mailboxes>" "move to box"
+macro index yy "\
+<tag-prefix>\
+<save-message>?<toggle-mailboxes>\
+" "move to box"
 
 # delete {{{
 bind index dd delete-message
