Make rr (notmuch-retag) tag-aware

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -150,7 +150,9 @@ macro index <Backspace> <limit>all<Return> "limit reset"
 # }}}
 
 # retag {{{
-macro index rr "<enter-command>exec modify-labels<Return>" "retag"
+macro index rr "\
+<enter-command>exec tag-prefix modify-labels <Return>\
+" "retag"
 
 macro index rt "\
 <enter-command>exec tag-prefix-cond modify-labels<Return>\
