Move no-confirm to bind `notmuch new`

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -171,13 +171,16 @@ bind index L next-thread
 
 # sync {{{
 macro index sm "<sync-mailbox><Enter><check-stats>" "commit mail"
-macro index sn "<shell-escape>notmuch new<Return><check-stats>" "commit notmuch"
+macro index sn "\
+<enter-command>set wait_key=no<Return>\
+<shell-escape>notmuch new<Return>\
+<enter-command>set wait_key=yes<Return>\
+<check-stats>\
+" "commit notmuch"
 
 macro index ss \
 "sm\
-<enter-command>set wait_key=no<Return>\
 sn\
-<enter-command>set wait_key=yes<Return>\
 " "commit"
 
 macro index soo \
