Reformat sync-related binds

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -170,7 +170,9 @@ bind index H previous-thread
 bind index L next-thread
 
 # sync {{{
-macro index sm "<sync-mailbox><Enter><check-stats>" "commit mail"
+macro index sm "\
+<sync-mailbox><Enter><check-stats>\
+" "commit mail"
 macro index sn "\
 <enter-command>set wait_key=no<Return>\
 <shell-escape>notmuch new<Return>\
@@ -178,30 +180,30 @@ macro index sn "\
 <check-stats>\
 " "commit notmuch"
 
-macro index ss \
-"sm\
+macro index ss "\
+sm\
 sn\
 " "commit"
 
-macro index soo \
-"<shell-escape> mbsync -V OUTLOOK_" \
-"push outlook-?"
-macro index sos \
-"<shell-escape> mbsync -V OUTLOOK_SYS<Return>" \
-"push outlook-sys"
-macro index sox \
-"<shell-escape> mbsync -V OUTLOOK_X<Return>" \
-"push outlook-x"
+macro index soo "\
+<shell-escape> mbsync -V OUTLOOK_\
+" "push outlook-?"
+macro index sos "\
+<shell-escape> mbsync -V OUTLOOK_SYS<Return>\
+" "push outlook-sys"
+macro index sox "\
+<shell-escape> mbsync -V OUTLOOK_X<Return>\
+" "push outlook-x"
 
-macro index see \
-"<shell-escape> mbsync -V ETH_" \
-"push eth-?"
-macro index ses \
-"<shell-escape> mbsync -V ETH_SYS<Return>" \
-"push eth-sys"
-macro index sex \
-"<shell-escape> mbsync -V ETH_X<Return>" \
-"push eth-x"
+macro index see "\
+<shell-escape> mbsync -V ETH_\
+" "push eth-?"
+macro index ses "\
+<shell-escape> mbsync -V ETH_SYS<Return>\
+" "push eth-sys"
+macro index sex "\
+<shell-escape> mbsync -V ETH_X<Return>\
+" "push eth-x"
 # }}}
 
 # do not prompt for confirming box-moving
