--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -189,20 +189,36 @@ macro index soo "\
 <shell-escape> mbsync -V OUTLOOK_\
 " "push outlook-?"
 macro index sos "\
+sm\
+<enter-command>set wait_key=no<Return>\
 <shell-escape> mbsync -V OUTLOOK_SYS<Return>\
+<enter-command>set wait_key=yes<Return>\
+ss\
 " "push outlook-sys"
 macro index sox "\
+sm\
+<enter-command>set wait_key=no<Return>\
 <shell-escape> mbsync -V OUTLOOK_X<Return>\
+<enter-command>set wait_key=yes<Return>\
+ss\
 " "push outlook-x"
 
 macro index see "\
 <shell-escape> mbsync -V ETH_\
 " "push eth-?"
 macro index ses "\
+sm\
+<enter-command>set wait_key=no<Return>\
 <shell-escape> mbsync -V ETH_SYS<Return>\
+<enter-command>set wait_key=yes<Return>\
+ss\
 " "push eth-sys"
 macro index sex "\
+sm\
+<enter-command>set wait_key=no<Return>\
 <shell-escape> mbsync -V ETH_X<Return>\
+<enter-command>set wait_key=yes<Return>\
+ss\
 " "push eth-x"
 # }}}
 
