Make delete binds tag-aware

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -234,14 +234,25 @@ macro index yy "\
 " "move to box"
 
 # delete {{{
-bind index dd delete-message
-macro index dD <delete-message><sync-mailbox><Return><check-stats> "delete!"
+macro index dd "\
+<tag-prefix>\
+<delete-message>\
+" "delete"
+
+macro index dD "\
+<tag-prefix>\
+<delete-message>\
+<sync-mailbox><Return><check-stats>\
+" "delete!"
 
 bind index d. delete-pattern
 bind index d, undelete-pattern
 macro index d> <delete-pattern>.<Return><sync-mailbox><Return><check-stats> "delete *!"
 
-bind index du undelete-message
+macro index du "\
+<tag-prefix>\
+<undelete-message>\
+" "undelete"
 # }}}
 
 # tag {{{
