Add bind for mov'g to archived-dir

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -232,6 +232,10 @@ macro index yy "\
 <tag-prefix>\
 <save-message>?<toggle-mailboxes>\
 " "move to box"
+macro index yx "\
+<tag-prefix>\
+<save-message>+.x.001\
+" "move to box"
 
 # delete {{{
 macro index dd "\
