Use bold in active-entry in |index|

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -91,7 +91,7 @@ set mask = "^"
 # default
 color normal color255 color016
 # active
-color indicator color231 color237
+color indicator bold color231 color237
 # }}}
 
 # component-specifics {{{
