Use bold in active-entry in sidebar

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -119,7 +119,7 @@ color tree color245 color016
 # default
 color sidebar_background color255 color016
 # active
-color sidebar_indicator color231 color237
+color sidebar_indicator bold color231 color237
 # selected (to be activated)
 color sidebar_highlight color141 color016
 color sidebar_divider color245 color016
