--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -109,6 +109,7 @@ color index color197 color016 "~D"
 color index_number color245 color016
 
 color index_date color245 color016
+color index_size color245 color016
 
 # thread-indicator
 color tree color245 color016
