Use steel-blue for nm-tags

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -111,6 +111,8 @@ color index_number color245 color016
 color index_date color245 color016
 color index_size color245 color016
 
+color index_tags color067 color016
+
 # thread-indicator
 color tree color245 color016
 # }}}
