Reorder colors for columns of |index|

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -107,14 +107,11 @@ color index color197 color016 "~D"
 
 # columns {{{
 color index_number color245 color016
-
 color index_date color245 color016
 color index_size color245 color016
+color tree color245 color016  # thread-indicator
 
 color index_tags color067 color016
-
-# thread-indicator
-color tree color245 color016
 # }}}
 # }}}
 
