Set archive-dir separately per account

--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -5,6 +5,7 @@ set folder = "~/mail/raw/eth/"
 set record = "+.Skickat"
 set trash = "+.Trash"
 set postponed = "+.Drafts"
+set my_archive_dir = "+.x.001"
 
 named-mailboxes \
     "ETH_TRASH" "~/mail/raw/eth/.Trash/" \
