--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -5,6 +5,7 @@ set folder = "~/mail/raw/outlook/"
 set record = ""  # outlook auto-registers sent mail
 set trash = "+.Deleted"
 set postponed = "+.Drafts"
+set my_archive_dir = "+.x.001"
 
 named-mailboxes \
     "OUTLOOK_TRASH" ~/mail/raw/outlook/.Deleted/ \
