--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -234,7 +234,7 @@ macro index yy "\
 " "move to box"
 macro index yx "\
 <tag-prefix>\
-<save-message>+.x.001\
+<save-message>$my_archive_dir\
 " "move to box"
 
 # delete {{{
