--- a/.config/neomutt/box/box.conf
+++ b/.config/neomutt/box/box.conf
@@ -3,9 +3,11 @@ source "~/.config/neomutt/box/virtual/notmuch.conf"
 set my_eth_conf = "~/.config/neomutt/box/real/eth.conf"
 source $my_eth_conf
 folder-hook $folder "source $my_eth_conf"
+folder-hook _ETH.* "source $my_eth_conf"
 
 set my_outlook_conf = "~/.config/neomutt/box/real/outlook.conf"
 source $my_outlook_conf
 folder-hook $folder "source $my_outlook_conf"
+folder-hook _OUTLOOK.* "source $my_outlook_conf"
 
 # vim: filetype=neomuttrc foldmethod=marker
