--- a/.config/neomutt/box/virtual/notmuch.conf
+++ b/.config/neomutt/box/virtual/notmuch.conf
@@ -11,6 +11,7 @@ set mark_old = no
 
 virtual-mailboxes \
     "INBOX" "notmuch://?query=folder:eth/.INBOX folder:outlook/.INBOX" \
+    "MAIN" "notmuch://?query=tag:MAIN" \
     "_ETH" "notmuch://?query=folder:/eth/" \
     "_ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
     "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
