--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -9,6 +9,11 @@ set my_archive_dir = "+.x.001"
 
 named-mailboxes \
     "ETH_TRASH" "~/mail/raw/eth/.Trash/" \
+
+virtual-mailboxes \
+    "_ETH" "notmuch://?query=folder:/eth/" \
+    "_ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
+    "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat"
 # }}}
 
 # write {{{
