Move eth-specific nm-boxes to eth-config

--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -9,6 +9,11 @@ set my_archive_dir = "+.x.001"
 
 named-mailboxes \
     "OUTLOOK_TRASH" ~/mail/raw/outlook/.Deleted/ \
+
+virtual-mailboxes \
+    "_OUTLOOK" "notmuch://?query=folder:/outlook/" \
+    "_OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX" \
+    "_OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent"
 # }}}
 
 # write {{{
