Add nm-boxes for archive

--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -13,7 +13,8 @@ named-mailboxes \
 virtual-mailboxes \
     "_ETH" "notmuch://?query=folder:/eth/" \
     "_ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
-    "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat"
+    "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
+    "_ETH_X" "notmuch://?query=folder:eth/\.x\.001"
 # }}}
 
 # write {{{
