--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -13,7 +13,8 @@ named-mailboxes \
 virtual-mailboxes \
     "_OUTLOOK" "notmuch://?query=folder:/outlook/" \
     "_OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX" \
-    "_OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent"
+    "_OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent" \
+    "_OUTLOOK_X" "notmuch://?query=folder:outlook/\.x\.001"
 # }}}
 
 # write {{{
