Add (tmp) Y-archives

--- a/.config/neomutt/box/real/outlook.conf
+++ b/.config/neomutt/box/real/outlook.conf
@@ -14,7 +14,8 @@ virtual-mailboxes \
     "_OUTLOOK" "notmuch://?query=folder:/outlook/" \
     "_OUTLOOK_INBOX" "notmuch://?query=folder:outlook/.INBOX" \
     "_OUTLOOK_SENT" "notmuch://?query=folder:outlook/.Sent" \
-    "_OUTLOOK_X" "notmuch://?query=folder:outlook/\.x\.001"
+    "_OUTLOOK_X" "notmuch://?query=folder:outlook/\.x\.001" \
+    "_OUTLOOK_Y" "notmuch://?query=folder:/outlook/\.x\./ and not folder:outlook/\.x\.001"
 # }}}
 
 # write {{{
