--- a/.config/neomutt/box/real/eth.conf
+++ b/.config/neomutt/box/real/eth.conf
@@ -14,7 +14,8 @@ virtual-mailboxes \
     "_ETH" "notmuch://?query=folder:/eth/" \
     "_ETH_INBOX" "notmuch://?query=folder:eth/.INBOX" \
     "_ETH_SENT" "notmuch://?query=folder:eth/.Skickat" \
-    "_ETH_X" "notmuch://?query=folder:eth/\.x\.001"
+    "_ETH_X" "notmuch://?query=folder:eth/\.x\.001" \
+    "_ETH_Y" "notmuch://?query=folder:/eth/\.x\./ and not folder:eth/\.x\.001"
 # }}}
 
 # write {{{
