--- a/.msmtprc
+++ b/.msmtprc
@@ -3,6 +3,17 @@ auth on
 tls on
 tls_starttls on
 
+# xyz {{{
+account xyz
+host 127.0.0.1
+port 1025
+user me@shengdichen.xyz
+from me@shengdichen.xyz
+passwordeval gpg -dq ~/mail/pw/xyz.gpg
+tls_certcheck off
+auth login
+# }}}
+
 # outlook {{{
 account outlook
 host smtp-mail.outlook.com
