--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -1,3 +1,6 @@
+# hide the top help-bar
+set help = no
+
 # scroll at boundaries, NOT jump-page
 set menu_scroll = yes
 # number of context-lines when scrolling
