--- a/.config/neomutt/box/box.conf
+++ b/.config/neomutt/box/box.conf
@@ -1,5 +1,10 @@
 source "~/.config/neomutt/box/virtual/notmuch.conf"
 
+set my_xyz_conf = "~/.config/neomutt/box/real/xyz.conf"
+source $my_xyz_conf
+folder-hook $folder "source $my_xyz_conf"
+folder-hook _XYZ.* "source $my_xyz_conf"
+
 set my_eth_conf = "~/.config/neomutt/box/real/eth.conf"
 source $my_eth_conf
 folder-hook $folder "source $my_eth_conf"
